--- a/CineMais/src/filmesEmCartaz.fxml
+++ b/CineMais/src/filmesEmCartaz.fxml
@@ -62,7 +62,7 @@
                         <Font name="Comic Sans MS Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label  fx:id="filme1" layoutX="24.0" layoutY="89.0" prefHeight="23.0" prefWidth="179.0" text="Vingadores: Ultimato" textFill="WHITE">
+                  <Label fx:id="filme1" layoutX="24.0" layoutY="89.0" prefHeight="23.0" prefWidth="179.0" text="Vingadores: Ultimato" textFill="WHITE">
                      <font>
                         <Font name="Comic Sans MS Bold" size="16.0" />
                      </font>
@@ -77,7 +77,7 @@
                         <Font name="Comic Sans MS Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Button fx:id="btn01"  layoutX="232.0" layoutY="86.0" mnemonicParsing="false" onAction="#irIngresso01" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="13:50" textFill="WHITE">
+                  <Button fx:id="btn01" layoutX="232.0" layoutY="86.0" mnemonicParsing="false" onAction="#irIngresso01" prefHeight="30.0" prefWidth="95.0" style="-fx-background-color: #313131; -fx-border-color: #666666; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="13:50" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -131,13 +131,13 @@
                   <Label fx:id="infoSalaTipo04" layoutX="368.0" layoutY="136.0" text="Sala 08  3D 10/07" textFill="WHITE" />
                   <Label fx:id="infoSalaTipo05" layoutX="233.0" layoutY="197.0" text="Sala 04  2D 11/07" textFill="WHITE" />
                   <Label fx:id="infoSalaTipo06" layoutX="368.0" layoutY="197.0" text="Sala 03  3D 12/07" textFill="WHITE" />
-                  <TextField fx:id="inputDia" layoutX="280.0" layoutY="2.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #303030;" text="DD" />
+                  <TextField fx:id="inputDia" layoutX="280.0" layoutY="2.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #fffffff;" text="08" />
                   <Label layoutX="323.0" layoutY="1.0" text="/" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="inputMes" layoutX="337.0" layoutY="3.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #303030;" text="MM" />
+                  <TextField fx:id="inputMes" layoutX="337.0" layoutY="3.0" prefHeight="25.0" prefWidth="38.0" style="-fx-background-color: #ffffff;" text="07" />
                   <Button fx:id="btnBuscarData" layoutX="381.0" layoutY="3.0" mnemonicParsing="false" onAction="#procurarPorData" prefHeight="25.0" prefWidth="93.0" style="-fx-background-color: #202020;" text="Bucar Data" textFill="#ff4e4e" underline="true">
                      <font>
                         <Font name="Comic Sans MS" size="14.0" />
@@ -145,6 +145,11 @@
                   </Button>
                </children>
             </Pane>
+            <Button fx:id="btnPerfil" layoutX="578.0" layoutY="14.0" mnemonicParsing="false" onAction="#menuPerfil" prefHeight="22.0" prefWidth="31.0" style="-fx-background-color: #181818;" text="#" textFill="#ff1313">
+               <font>
+                  <Font name="Constantia Bold" size="25.0" />
+               </font>
+            </Button>
          </children>
     </AnchorPane>
   </children>
