--- a/CineMais/src/listaShoppings.fxml
+++ b/CineMais/src/listaShoppings.fxml
@@ -88,6 +88,11 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </Button>
+            <Button fx:id="btnPerfil" layoutX="584.0" layoutY="9.0" mnemonicParsing="false" onAction="#menuPerfil" prefHeight="22.0" prefWidth="31.0" style="-fx-background-color: #181818;" text="#" textFill="#ff1313">
+               <font>
+                  <Font name="Constantia Bold" size="25.0" />
+               </font>
+            </Button>
          </children>
     </AnchorPane>
   </children>
